# rssClientCpp

./: .gitignore  CMakeLists.txt  ChannelQuery.cpp  ChannelQuery.hpp  DBConnection.cpp  DBConnection.hpp  ImageQuery.cpp  ImageQuery.hpp  ItemQuery.cpp  ItemQuery.hpp  compile_commands.json  main.cpp  models.cpp  models.hpp  rss.db  rssfeedstopstories.cms  sql.txt  url.txt
samples/: rss_sample_2.xml  rss_sample_91.xml  rss_sample_92.xml
src/: DBConnection.cpp  DBConnection.hpp  Download.cpp  Download.hpp  ImageQuery.hpp  ItemQuery.cpp  ItemQuery.hpp  RssParser.cpp  RssParser.hpp  main.cpp  models.hpp
src/ui/: MainWindow.cpp  MainWindow.hpp
src/ui/models/: Article.cpp  Article.hpp
src/ui/widgets/: ArticlesModel.cpp  ArticlesModel.hpp
